<resources>
    <string name="app_name" translatable="false">Turnosync</string>
    <string name="web_client_token" translatable="false">424030572418-q0mtitaf63mus90332mh6pud2kcp6c9d.apps.googleusercontent.com</string>
    <string name="data_ref_users" translatable="false">users</string>
    <string name="data_ref_workgroups" translatable="false">workgroups</string>
    <string name="data_ref_shifts" translatable="false">shifts</string>
    <string name="data_ref_invites" translatable="false">invites</string>
    <string name="data_ref_shiftTypes" translatable="false">shifttypes</string>
    <string name="data_ref_messaging" translatable="false">messaging</string>
    <string name="data_ref_devices" translatable="false">devices</string>
    <string name="data_ref_changeRequests">changerequests</string>
    <string name="data_key_displayname" translatable="false">displayName</string>
    <string name="data_key_shortname" translatable="false">shortName</string>
    <string name="data_key_email" translatable="false">email</string>
    <string name="data_key_uid" translatable="false">uid</string>
    <string name="data_key_active" translatable="false">active</string>
    <string name="data_key_deviceid" translatable="false">deviceId</string>
    <string name="data_key_token" translatable="false">token</string>
    <string name="data_key_workgroupid" translatable="false">workgroupId</string>
    <string name="data_key_info" translatable="false">info</string>
    <string name="data_key_role" translatable="false">role</string>
    <string name="data_key_date" translatable="false">date</string>
    <string name="data_key_weeklyhours" translatable="false">weeklyHours</string>
    <string name="data_key_manager" translatable="false">manager</string>
    <string name="data_key_id" translatable="false">id</string>
    <string name="data_key_timestamp" translatable="false">timestamp</string>
    <string name="data_key_state" translatable="false">state</string>
    <string name="data_int_workgroup" translatable="false">intentWorkgroup</string>
    <string name="data_int_users" translatable="false">intentUsers</string>
    <string name="data_int_hours" translatable="false">intentWeeklyHours</string>
    <string name="data_int_role" translatable="false">intentRole</string>
    <string name="data_int_shiftTypes" translatable="false">intentShiftTypes</string>
    <string name="data_changes_added" translatable="false">added</string>
    <string name="data_changes_removed" translatable="false">removed</string>
    <string name="data_changes_editedNew" translatable="false">editedNew</string>
    <string name="data_changes_editedOld" translatable="false">editedOld</string>
    <string name="toast_profile_displayname">Display name successfully updated</string>
    <string name="toast_profile_email">Account email successfully updated</string>
    <string name="toast_sign_in_successfully">Signed in</string>
    <string name="toast_sign_in_canceled">Signed in canceled</string>
    <string name="toast_sign_in_failed">Authentication failed</string>
    <string name="toast_resetpassword_successfully">Follow the instructions inside the email. Make sure to check the spam inbox</string>
    <string name="toast_resetpassword_failed">This email isn\'t registered</string>
    <string name="toast_register_failed">This email is already in use</string>
    <string name="toast_update_services">Please update Google Play Services</string>
    <string name="toast_generic_error">An error occurred:</string>
    <string name="toast_schedule_noShiftTypes">You need to create a shift type before setting shifts. To do this go to the workgroup settings screen.</string>
    <string name="toast_schedule_notLoaded">Data not loaded yet, try again in a moment.</string>
    <string name="toast_schedule_conflict">Can\'t assign shift to target user, date conflict</string>
    <string name="toast_request_conflict">Shift conflict, one of the users already has a shift on the exchanged date</string>
    <string name="toast_drawer_noWorkgroup">You currently have no workgroups to access its calendar</string>
    <string name="activity_signin">Sign in</string>
    <string name="activity_register">Register</string>
    <string name="activity_reset_password">Reset password</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_workgroup_settings">Workgroup Settings</string>
    <string name="activity_change_requests">Change requests</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_mycalendar">My Calendar</string>
    <string name="fragment_schedule">Schedule</string>
    <string name="fragment_workgroupSettings">Workgroup settings</string>
    <string name="fragment_shiftTypes">Shift types</string>
    <string name="dialog_workgroup_title">Create new workgroup</string>
    <string name="dialog_workgroup_name">Name</string>
    <string name="dialog_workgroup_desc">Description (optional)</string>
    <string name="dialog_workgroup_button_create">Create</string>
    <string name="dialog_workgroup_button_cancel">Cancel</string>
    <string name="dialog_adduser_title">Add user to workgroup</string>
    <string name="dialog_adduser_email">Email</string>
    <string name="dialog_adduser_button_add">Invite</string>
    <string name="dialog_adduser_button_cancel">Cancel</string>
    <string name="dialog_editinitials_title">Edit user initials</string>
    <string name="dialog_editinitials_initials">Initials</string>
    <string name="dialog_editinitials_button_edit">Edit</string>
    <string name="dialog_editinitials_button_cancel">Cancel</string>
    <string name="dialog_editinitials_error">Only lowercase and uppercase allowed</string>
    <string name="dialog_removeUser_title">Are you sure to remove this user?</string>
    <string name="dialog_removeUser_message">You will no longer be able to set shifts to this user, existing shift will be preserved</string>
    <string name="dialog_removeUser_button_remove">Remove</string>
    <string name="dialog_removeUser_button_cancel">Cancel</string>
    <string name="dialog_createType_title_new">Create new shift type</string>
    <string name="dialog_createType_title_edit">Edit shift type</string>
    <string name="dialog_createType_button_create">Create</string>
    <string name="dialog_createType_button_edit">Edit</string>
    <string name="dialog_createType_button_cancel">Cancel</string>
    <string name="dialog_createType_name">Name</string>
    <string name="dialog_createType_tag">Tag</string>
    <string name="dialog_createType_interval">Shift interval:</string>
    <string name="dialog_createType_from">from</string>
    <string name="dialog_createType_start">Start</string>
    <string name="dialog_createType_to">to</string>
    <string name="dialog_createType_end">End</string>
    <string name="dialog_createType_defaultTime">00:00</string>
    <string name="dialog_createType_duration">Duration:</string>
    <string name="dialog_createType_color">Background color:</string>
    <string name="dialog_createType_error_time">You cannot set the end time to a time earlier than the start time.</string>
    <string name="dialog_timePicker_title">Set time</string>
    <string name="dialog_removeType_title">Are you sure to remove this type?</string>
    <string name="dialog_removeType_message">You will no longer be able to set this shift type to shifts, this action will not remove existing shifts with this type</string>
    <string name="dialog_removeType_button_remove">Remove</string>
    <string name="dialog_removeType_button_cancel">Cancel</string>
    <string name="dialog_createShift_title">Create shifts</string>
    <string name="dialog_createShift_button_create">Create</string>
    <string name="dialog_createShift_button_cancel">Cancel</string>
    <string name="dialog_createShift_type">Shift type</string>
    <string name="dialog_createShift_schedule">Schedule</string>
    <string name="dialog_createShift_repeat">Repeat:</string>
    <string name="dialog_createShift_weekly">Weekly hours:</string>
    <string name="dialog_editShift_title">Edit or remove shifts</string>
    <string name="dialog_editShift_button_change">Change</string>
    <string name="dialog_editShift_button_remove">Remove</string>
    <string name="dialog_editShift_button_cancel">Cancel</string>
    <string name="dialog_editShift_user">User</string>
    <string name="dialog_editShift_type">Shift type</string>
    <string name="dialog_editShift_schedule">Schedule</string>
    <string name="dialog_shiftChanges_title">Confirm schedule changes?</string>
    <string name="dialog_shiftChanges_button_confirm">Confirm</string>
    <string name="dialog_shiftChanges_button_cancel">Cancel</string>
    <string name="dialog_shiftChanges_added">Added to</string>
    <string name="dialog_shiftChanges_removed">Removed from</string>
    <string name="dialog_shiftChanges_editedNew">Added by exchange to</string>
    <string name="dialog_shiftChanges_editedOld">Removed by exchange from</string>
    <string name="dialog_shiftChanges_shift">Shift</string>
    <string name="dialog_shiftChanges_schedule">Schedule</string>
    <string name="dialog_weeklyHours_title">Set max hours per week</string>
    <string name="dialog_weeklyHours_button_set">Set</string>
    <string name="dialog_weeklyHours_button_cancel">Cancel</string>
    <string name="dialog_resetpassword_title">Forgot your account password? </string>
    <string name="dialog_resetpassword_message">Enter your email below to reset your password</string>
    <string name="dialog_resetpassword_button_send">Send</string>
    <string name="dialog_resetpassword_button_cancel">Cancel</string>
    <string name="dialog_requestChange_title">Confirm change request</string>
    <string name="dialog_requestChange_button_request">Request</string>
    <string name="dialog_requestChange_button_cancel">Cancel</string>
    <string name="dialog_requestChange_user">User</string>
    <string name="dialog_workgroupInfo_button_close">Close</string>
    <string name="requests_user_label">User</string>
    <string name="requests_state_label">State:</string>
    <string name="requests_change_requested">Requested</string>
    <string name="requests_change_accepted">Accepted</string>
    <string name="requests_change_approved">Approved</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_calendar">My calendar</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_signout">Sign out</string>
    <string name="menu_home_info">Info</string>
    <string name="menu_home_settings">Settings</string>
    <string name="calendar_total_hours">Month hours:</string>
    <string name="menu_mycalendar_switch">Schedule</string>
    <string name="menu_mycalendar_settings">Settings</string>
    <string name="menu_schedule_edit">Change requests</string>
    <string name="menu_schedule_switch">My calendar</string>
    <string name="menu_schedule_settings">Settings</string>
    <string name="menu_wkSettings_add">Add user</string>
    <string name="wkSettings_label_users">USERS</string>
    <string name="wkSettings_label_shiftTypes">Shift types</string>
    <string name="wkSettings_label_weeklyHours">Weekly hours: </string>
    <string name="menu_shiftTypes_add">New type</string>
    <string name="form_error_field_required">This field is required</string>
    <string name="form_error_name">This name is invalid. Only "-" symbol is allowed.</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_or">Or</string>
    <string name="login_action_signin">Sign in</string>
    <string name="login_action_register">Register</string>
    <string name="register_name">Display name</string>
    <string name="register_password_repeat">Repeat password</string>
</resources>