<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_mycalendar_requests"
        android:icon="@drawable/ic_swap_horiz_black_24dp"
        android:title="@string/menu_schedule_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_mycalendar_switch"
        android:icon="@drawable/ic_schedule_black_24dp"
        android:title="@string/menu_mycalendar_switch"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_mycalendar_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_mycalendar_settings"
        app:showAsAction="ifRoom" />
</menu>