<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_item_main"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_item_home" />
        <item
            android:id="@+id/nav_item_calendar"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/nav_item_calendar" />
    </group>
    <group android:id="@+id/nav_group_signout">
        <item
            android:id="@+id/nav_item_signout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_item_signout" />
    </group>
</menu>